[project]
name = "plannerpulse"
version = "0.1.0"
description = "AI-powered newsletter generation system for meeting planners"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.13.4",
    "feedparser>=6.0.11",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "jinja2>=3.1.6",
    "openai>=1.97.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "trafilatura>=2.0.0",
    "bleach>=6.2.0",
    "alembic>=1.14.0",
    "cachetools>=5.5.0",
    "apscheduler>=3.11.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]
prod = [
    "gunicorn>=23.0.0",
    "gevent>=24.11.1",
]
